--- a/rails/view/index.html.erb
+++ b/rails/view/index.html.erb
@@ -1,5 +1,8 @@
 <%= render partial: user.roles, spacer_template: 'comma' %>
 <%= render partial: 'admin/affiliates/affiliate', collection: @admin_warehouse.affiliates, spacer_template: 'comma' %>
+<%= render partial: 'admin/affiliates/affiliate', object: @admin_warehouse.affiliate %>
 
 <%= render partial: user.roles.first(2), spacer_template: 'comma' %>
 <%= "и ещё #{user.roles.length - 2}" if user.roles.length > 2 %>
+
+<%= admin_order.read_attribute_before_type_cast(:exchange_status) %>
