--- a/js/_tasks/ul_to_tree/sass/_ul_to_tree2.scss
+++ b/js/_tasks/ul_to_tree/sass/_ul_to_tree2.scss
@@ -1,72 +1,115 @@
 .ul_to_tree2 {
-  padding-left: 8px;
+  margin: 0;
+  padding: 0;
+  padding-left: 2em;
 
   li {
-    position: relative;
     list-style: none outside none;
-    border-left: solid 1px #999;
-    padding: 0 0 0 19px;
+    margin: 0;
+    padding: 0;
+    padding-left: 2em;
+    position: relative;
+
+    &>i {
+      display: none;
+    }
+
+    &>div {
+      position: relative;
+    }
 
     &::before {
       content: "";
       display: block;
-      border-bottom: solid 1px #999;
+      border-left: solid 1px LightGray;
       position: absolute;
-      width: 16px;
-      height: 10px;
-      left: 0;
+      width: 0px;
+      height: 100%;
+      left: -1.5em;
       top: 0;
     }
 
     &::after {
       content: "";
       display: block;
+      border-bottom: solid 1px LightGray;
+      border-left: solid 1px LightGray;
       position: absolute;
-      width: 16px;
-      height: 100%;
-      // border-left: solid 1px #999;
-      border-left: solid 1px red;
-      left: 2px;
-      top: 0;
+      width: 3.2em;
+      height: 0.6em;
+      left: -1.5em;
+      top: 0em;
     }
 
     &:last-child {
-      border-left: 0 none;
 
       &::before {
-        border-left: solid 1px #999;
+        border-left: none;
+      }
+    }
+
+    &:has(>ul) {
+      &>div::before {
+        content: "";
+        display: block;
+        border-left: solid 1px LightGray;
+        position: absolute;
+        width: 0px;
+        height: 100%;
+        left: -1.5em;
+        top: 0.6em;
       }
     }
   }
+
+  &>li {
+    &::before {
+      left: -1.0em;
+    }
+    &::after {
+      left: -1.0em;
+      width: 2.7em;
+    }
+  }
+
   ul {
     margin: 0;
-    padding-left: 6px;
+    padding: 0;
+    margin-left: -2em;
+    padding-left: 2em;
   }
-  &.ul_to_tree-dropdown {
+
+  &.ul_to_tree2-dropdown {
     li:has(>ul) {
+      &>i {
+        display: block;
+        position: absolute;
+        left: 0.5em;
+        top: 0.6em;
+        width: 0.9em;
+        height: 0.9em;
+        margin-left: -.45em;
+        margin-top: -.45em;
+        background-image: url(plus.svg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        cursor: pointer;
+        z-index: 2;
+      }
       &>ul {
         transition: height 250ms ease;
         overflow: hidden;
       }
-      &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 11px;
-        height: 11px;
-        left: -6px;
-        top: 5px;
-        background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAALCAIAAAD0nuopAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAE1JREFUeNpinDlzJgNlgAWI09LScEnPmjWLoAImrHpIAkwMFAMqGMGC6X44GzkIsHoQooAFTTVQKdbAwxOigyMsmIh3MC7ASHnqBAgwAD4CGeOiDhXRAAAAAElFTkSuQmCC');
-        background-position:-11px 0;
-        background-repeat:no-repeat;
-        cursor:pointer;
-      }
       &.close {
-        &::after {
-          background-position: 0 0;
-        }
         &>ul {
           height: 0px;
+          li::before, li::after, div::before, i {
+            display: none;
+          }
+        }
+        &>div::before {
+          display: none;
         }
       }
     }
