--- a/js/_tasks/ul_to_tree/css/index.css
+++ b/js/_tasks/ul_to_tree/css/index.css
@@ -1,125 +1,149 @@
-html, body {
-  margin: 0;
-  padding: 0; }
-
 .ul_to_tree {
-  padding-left: 8px; }
-  .ul_to_tree li {
-    position: relative;
-    list-style: none outside none;
-    border-left: solid 1px #999;
-    padding: 0 0 0 19px; }
-    .ul_to_tree li::before {
-      content: "";
-      display: block;
-      border-bottom: solid 1px #999;
-      position: absolute;
-      width: 16px;
-      height: 10px;
-      left: 0;
-      top: 0; }
-    .ul_to_tree li:last-child {
-      border-left: 0 none; }
-      .ul_to_tree li:last-child::before {
-        border-left: solid 1px #999; }
-  .ul_to_tree ul {
-    margin: 0;
-    padding-left: 6px; }
-  .ul_to_tree.ul_to_tree-dropdown li:has(> ul) > ul {
-    transition: height 250ms ease;
-    overflow: hidden; }
-  .ul_to_tree.ul_to_tree-dropdown li:has(> ul)::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 11px;
-    height: 11px;
-    left: -6px;
-    top: 5px;
-    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAALCAIAAAD0nuopAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAE1JREFUeNpinDlzJgNlgAWI09LScEnPmjWLoAImrHpIAkwMFAMqGMGC6X44GzkIsHoQooAFTTVQKdbAwxOigyMsmIh3MC7ASHnqBAgwAD4CGeOiDhXRAAAAAElFTkSuQmCC");
-    background-position: -11px 0;
-    background-repeat: no-repeat;
-    cursor: pointer; }
-  .ul_to_tree.ul_to_tree-dropdown li:has(> ul).close::after {
-    background-position: 0 0; }
-  .ul_to_tree.ul_to_tree-dropdown li:has(> ul).close > ul {
-    height: 0px; }
+  padding-left: 8px;
+}
+.ul_to_tree li {
+  position: relative;
+  list-style: none outside none;
+  border-left: solid 1px #999;
+  padding: 0 0 0 19px;
+}
+.ul_to_tree li::before {
+  content: "";
+  display: block;
+  border-bottom: solid 1px #999;
+  position: absolute;
+  width: 16px;
+  height: 10px;
+  left: 0;
+  top: 0;
+}
+.ul_to_tree li:last-child {
+  border-left: 0 none;
+}
+.ul_to_tree li:last-child::before {
+  border-left: solid 1px #999;
+}
+.ul_to_tree ul {
+  margin: 0;
+  padding-left: 6px;
+}
+.ul_to_tree.ul_to_tree-dropdown li:has(> ul) > ul {
+  transition: height 250ms ease;
+  overflow: hidden;
+}
+.ul_to_tree.ul_to_tree-dropdown li:has(> ul)::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  left: -6px;
+  top: 5px;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAALCAIAAAD0nuopAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAE1JREFUeNpinDlzJgNlgAWI09LScEnPmjWLoAImrHpIAkwMFAMqGMGC6X44GzkIsHoQooAFTTVQKdbAwxOigyMsmIh3MC7ASHnqBAgwAD4CGeOiDhXRAAAAAElFTkSuQmCC");
+  background-position: -11px 0;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+.ul_to_tree.ul_to_tree-dropdown li:has(> ul).close::after {
+  background-position: 0 0;
+}
+.ul_to_tree.ul_to_tree-dropdown li:has(> ul).close > ul {
+  height: 0px;
+}
 
 .ul_to_tree2 {
   margin: 0;
   padding: 0;
-  padding-left: 2em; }
-  .ul_to_tree2 li {
-    list-style: none outside none;
-    margin: 0;
-    padding: 0;
-    padding-left: 2em;
-    position: relative; }
-    .ul_to_tree2 li > i {
-      display: none; }
-    .ul_to_tree2 li > div {
-      position: relative; }
-    .ul_to_tree2 li::before {
-      content: "";
-      display: block;
-      border-left: solid 1px LightGray;
-      position: absolute;
-      width: 0px;
-      height: 100%;
-      left: -1.5em;
-      top: 0; }
-    .ul_to_tree2 li::after {
-      content: "";
-      display: block;
-      border-bottom: solid 1px LightGray;
-      border-left: solid 1px LightGray;
-      position: absolute;
-      width: 3.2em;
-      height: 0.6em;
-      left: -1.5em;
-      top: 0em; }
-    .ul_to_tree2 li:last-child::before {
-      border-left: none; }
-    .ul_to_tree2 li:has(> ul) > div::before {
-      content: "";
-      display: block;
-      border-left: solid 1px LightGray;
-      position: absolute;
-      width: 0px;
-      height: 100%;
-      left: -1.5em;
-      top: 0.6em; }
-  .ul_to_tree2 > li::before {
-    left: -1.0em; }
-  .ul_to_tree2 > li::after {
-    left: -1.0em;
-    width: 2.7em; }
-  .ul_to_tree2 ul {
-    margin: 0;
-    padding: 0;
-    margin-left: -2em;
-    padding-left: 2em; }
-  .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul) > i {
-    display: block;
-    position: absolute;
-    left: 0.5em;
-    top: 0.6em;
-    width: 0.9em;
-    height: 0.9em;
-    margin-left: -.45em;
-    margin-top: -.45em;
-    background-image: url(plus.svg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    cursor: pointer;
-    z-index: 2; }
-  .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul) > ul {
-    transition: height 250ms ease;
-    overflow: hidden; }
-  .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul {
-    height: 0px; }
-    .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul li::before, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul li::after, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul div::before, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul i {
-      display: none; }
-  .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > div::before {
-    display: none; }
+  padding-left: 2em;
+}
+.ul_to_tree2 li {
+  list-style: none outside none;
+  margin: 0;
+  padding: 0;
+  padding-left: 2em;
+  position: relative;
+}
+.ul_to_tree2 li > i {
+  display: none;
+}
+.ul_to_tree2 li > div {
+  position: relative;
+}
+.ul_to_tree2 li::before {
+  content: "";
+  display: block;
+  border-left: solid 1px LightGray;
+  position: absolute;
+  width: 0px;
+  height: 100%;
+  left: -1.5em;
+  top: 0;
+}
+.ul_to_tree2 li::after {
+  content: "";
+  display: block;
+  border-bottom: solid 1px LightGray;
+  border-left: solid 1px LightGray;
+  position: absolute;
+  width: 3.2em;
+  height: 0.6em;
+  left: -1.5em;
+  top: 0em;
+}
+.ul_to_tree2 li:last-child::before {
+  border-left: none;
+}
+.ul_to_tree2 li:has(> ul) > div::before {
+  content: "";
+  display: block;
+  border-left: solid 1px LightGray;
+  position: absolute;
+  width: 0px;
+  height: 100%;
+  left: -1.5em;
+  top: 0.6em;
+}
+.ul_to_tree2 > li::before {
+  left: -1em;
+}
+.ul_to_tree2 > li::after {
+  left: -1em;
+  width: 2.7em;
+}
+.ul_to_tree2 ul {
+  margin: 0;
+  padding: 0;
+  margin-left: -2em;
+  padding-left: 2em;
+}
+.ul_to_tree2.ul_to_tree2-dropdown li:has(> ul) > i {
+  display: block;
+  position: absolute;
+  left: 0.5em;
+  top: 0.6em;
+  width: 0.9em;
+  height: 0.9em;
+  margin-left: -0.45em;
+  margin-top: -0.45em;
+  background-image: url(plus.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
+  z-index: 2;
+}
+.ul_to_tree2.ul_to_tree2-dropdown li:has(> ul) > ul {
+  transition: height 250ms ease;
+  overflow: hidden;
+}
+.ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul {
+  height: 0px;
+}
+.ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul li::before, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul li::after, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul div::before, .ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > ul i {
+  display: none;
+}
+.ul_to_tree2.ul_to_tree2-dropdown li:has(> ul).close > div::before {
+  display: none;
+}
+
+/*# sourceMappingURL=index.css.map */
