js - dynamyc form

--- a/js/_tasks/dynamic_form/index.css
+++ b/js/_tasks/dynamic_form/index.css
@@ -3,3 +3,10 @@
   position: absolute;
   left: -9999px;
 }
+
+.form-label.required:after, .form-check-label.required:after {
+  content: " *";
+  color: #EF4545;
+  font-size: larger;
+  line-height: 0.5em;
+}
